tests/Fixtures/Torture/Bad/compound_void.g
// EXPECT G007
kernel { entry func Main(void x) { x -= "s"; } }
